WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246682
[GStreamer][EME] Prevent race conditions when flushing
https://bugs.webkit.org/show_bug.cgi?id=246682
Summary
[GStreamer][EME] Prevent race conditions when flushing
Xabier Rodríguez Calvar
Reported
2022-10-18 01:45:47 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2022-10-18 01:56:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5486
EWS
Comment 2
2022-10-18 06:02:14 PDT
Committed
255673@main
(14bba72947fd): <
https://commits.webkit.org/255673@main
> Reviewed commits have been landed. Closing PR #5486 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-18 06:03:19 PDT
<
rdar://problem/101288303
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug